<?xml version="1.0"?>
<package format="2">
    <name>franka_controllers</name>
    <version>0.1.0</version>
    <description>Collection of controllers for the Franka arm.</description>
    <maintainer email="lionel.ott@sydney.edu.au">Lionel Ott</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>controller_interface</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>franka_hw</depend>
    <depend>hardware_interface</depend>
    <depend>pluginlib</depend>
    <depend>realtime_tools</depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>

    <export>
        <controller_interface plugin="${prefix}/plugin.xml"/>
    </export>
</package>
